--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -8,3 +8,8 @@
 @inject NotificationService NotificationService
 
 <PageTitle>Index</PageTitle>
+<div style="height: 100%; display: flex; justify-content: center; align-items: center;">
+    <RadzenCard class="rz-border-radius-0 align-content-center justify-content-center">
+        <RadzenText> //TODO welcome ... intro ... what ever ... </RadzenText>
+    </RadzenCard>
+</div>
