--- a/Client/Pages/FarmerBotDashboard.razor
+++ b/Client/Pages/FarmerBotDashboard.razor
@@ -24,6 +24,7 @@
                             <RadzenCard Style="width: 300px; height: 89px;" class="rz-border-radius-0">
                                     <RadzenText> //TODO Status info </RadzenText>   
                                 </RadzenCard>
+                                <FarmerBotStatusPage />
                             </RadzenStack>
                     </RadzenStack>
                 </RadzenCard>
@@ -33,6 +34,7 @@
                 <RadzenCard class="rz-border-radius-0 align-content-center justify-content-center">
                     <RadzenText> //TODO no idea by now section </RadzenText>
                 </RadzenCard>
+                <SetupStatusPage />
             </RadzenSplitterPane>
         </RadzenSplitter>
     </RadzenSplitterPane>
