--- a/Client/Shared/EventConsole.razor
+++ b/Client/Shared/EventConsole.razor
@@ -1,4 +1,5 @@
-﻿@inject IJSRuntime JSRuntime
+﻿@page "/eventconsole"
+@inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 @inject DialogService DialogService
 @inject TooltipService TooltipService
